backend_api_service/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: leaforg-app-backend-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - backend.leaforg.com
      secretName: leaforg-app-backend-api-tls
  rules:
    - host: backend.leaforg.com
      http:
        paths:
          - backend:
              serviceName: leaforg-app-backend-api-lamp
              servicePort: 80
